force-app/main/default/objects/MUSW__Inspection__c/MUSW__Inspection__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Ensure work is done in compliance with rules and regulations</description>
    <label>Inspection</label>
    <nameField>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>