force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Address__c.field-meta.xml
<CustomField>
    <fullName>AVO_Address__c</fullName>
    <label>Address</label>
    <length>30</length>
    <type>Text</type>
</CustomField>