force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_App_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_App_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>App ID</label>
    <referenceTo>MUSW__Permit2__c</referenceTo>
    <relationshipLabel>Inspections (App ID)</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>