force-app/main/default/objects/MUSW__Inspection__c/fields/Avo_Application__c.field-meta.xml
<CustomField>
    <fullName>Avo_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>MUSW__Application2__c</referenceTo>
    <relationshipLabel>Inspections</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>