force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>AVO_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inspections3</relationshipName>
    <type>Lookup</type>
</CustomField>