force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Bypass_Auto_Allocation__c.field-meta.xml
<CustomField>
    <fullName>AVO_Bypass_Auto_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Auto Allocation</label>
    <type>Checkbox</type>
</CustomField>