force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Case_Class__c.field-meta.xml
<CustomField>
    <fullName>AVO_Case_Class__c</fullName>
    <label>Case Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meter Compliance Case</fullName>
            </value>
            <value>
                <fullName>Non-Initialized Use Case</fullName>
            </value>
            <value>
                <fullName>Permit Violations Compliance Case</fullName>
            </value>
            <value>
                <fullName>Statutory Compliance Case</fullName>
            </value>
            <value>
                <fullName>WWSA Compliance Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>