force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Comment__c.field-meta.xml
<CustomField>
    <fullName>AVO_Comment__c</fullName>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>