force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Comments__c.field-meta.xml
<CustomField>
    <fullName>AVO_Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>