force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Compliance_Case_Num__c.field-meta.xml
<CustomField>
    <fullName>AVO_Compliance_Case_Num__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compliance Case #</label>
    <referenceTo>AVO_Compliance__c</referenceTo>
    <relationshipLabel>Inspections</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>