force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Compliant_or_Initiating_Event__c.field-meta.xml
<CustomField>
    <fullName>AVO_Compliant_or_Initiating_Event__c</fullName>
    <label>Compliant or Initiating Event</label>
    <type>TextArea</type>
</CustomField>