force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Concrete_Pad__c.field-meta.xml
<CustomField>
    <fullName>AVO_Concrete_Pad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concrete Pad</label>
    <type>Checkbox</type>
</CustomField>