force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Conservation_Tillage__c.field-meta.xml
<CustomField>
    <fullName>AVO_Conservation_Tillage__c</fullName>
    <label>Conservation Tillage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>