force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>AVO_Contact_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Info</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Inspections</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>