force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Contacted_Name_Title__c.field-meta.xml
<CustomField>
    <fullName>AVO_Contacted_Name_Title__c</fullName>
    <label>Contacted Name/Title</label>
    <length>30</length>
    <type>Text</type>
</CustomField>