force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Contractor__c.field-meta.xml
<CustomField>
    <fullName>AVO_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Inspections (Contractor)</relationshipLabel>
    <relationshipName>Inspections1</relationshipName>
    <type>Lookup</type>
</CustomField>