force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_County__c.field-meta.xml
<CustomField>
    <fullName>AVO_County__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>County</label>
    <referenceTo>AVO_County__c</referenceTo>
    <relationshipLabel>Inspections</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>