force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Crop_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Crop_Type__c</fullName>
    <label>Crop Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Row Crop</fullName>
            </value>
            <value>
                <fullName>Orchard</fullName>
            </value>
            <value>
                <fullName>Produce</fullName>
            </value>
            <value>
                <fullName>Sod</fullName>
            </value>
            <value>
                <fullName>Nursery</fullName>
            </value>
            <value>
                <fullName>Livestock/Poultry</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>