force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Date_Assigned__c.field-meta.xml
<CustomField>
    <fullName>AVO_Date_Assigned__c</fullName>
    <label>Date Assigned</label>
    <type>DateTime</type>
</CustomField>