force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Date_of_Meter_Reading__c.field-meta.xml
<CustomField>
    <fullName>AVO_Date_of_Meter_Reading__c</fullName>
    <label>Date of Meter Reading:</label>
    <type>Date</type>
</CustomField>