force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Date_Verified__c.field-meta.xml
<CustomField>
    <fullName>AVO_Date_Verified__c</fullName>
    <label>Date Verified</label>
    <type>DateTime</type>
</CustomField>