force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Describe_issue_with_plugging_of_well__c.field-meta.xml
<CustomField>
    <fullName>AVO_Describe_issue_with_plugging_of_well__c</fullName>
    <label>Describe issues with plugging of well</label>
    <type>TextArea</type>
</CustomField>