force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Diam__c.field-meta.xml
<CustomField>
    <fullName>AVO_Diam__c</fullName>
    <label>Diam</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>