force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Documented__c.field-meta.xml
<CustomField>
    <fullName>AVO_Documented__c</fullName>
    <label>Documented?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_YesNo</valueSetName>
    </valueSet>
</CustomField>