force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Drilling_Site_City__c.field-meta.xml
<CustomField>
    <fullName>AVO_Drilling_Site_City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drilling Site City</label>
    <referenceTo>AVO_Location__c</referenceTo>
    <relationshipLabel>Inspections (Drilling Site City)</relationshipLabel>
    <relationshipName>Inspections1</relationshipName>
    <type>Lookup</type>
</CustomField>