force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Drilling_Site_Location__c.field-meta.xml
<CustomField>
    <fullName>AVO_Drilling_Site_Location__c</fullName>
    <label>Drilling Site Location</label>
    <length>22</length>
    <type>Text</type>
</CustomField>