force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Drilling_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>AVO_Drilling_Site_Name__c</fullName>
    <label>Drilling Site Name</label>
    <length>6</length>
    <type>Text</type>
</CustomField>