force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Drilling_Site_Status__c.field-meta.xml
<CustomField>
    <fullName>AVO_Drilling_Site_Status__c</fullName>
    <label>Drilling Site Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
            </value>
            <value>
                <fullName>Not Start</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>