force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_EPD_Inspection_By__c.field-meta.xml
<CustomField>
    <fullName>AVO_EPD_Inspection_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EPD Inspection By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>