force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_EPD_Representative__c.field-meta.xml
<CustomField>
    <fullName>AVO_EPD_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EPD Representative(s) Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inspections7</relationshipName>
    <type>Lookup</type>
</CustomField>