force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Expiry_Verification_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_Expiry_Verification_Date__c</fullName>
    <label>Expiry Verification Date</label>
    <type>DateTime</type>
</CustomField>