force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Farmer_Initiated_Online_Request__c.field-meta.xml
<CustomField>
    <fullName>AVO_Farmer_Initiated_Online_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Farmer Initiated Online Request</label>
    <referenceTo>MUSW__Inspection__c</referenceTo>
    <relationshipLabel>Site Visit Requests</relationshipLabel>
    <relationshipName>Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>