force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Field_ACRES__c.field-meta.xml
<CustomField>
    <fullName>AVO_Field_ACRES__c</fullName>
    <label>Field ACRES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>