force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>AVO_Field_Name__c</fullName>
    <label>Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>