force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Flow_plan_mechanism_in_place__c.field-meta.xml
<CustomField>
    <fullName>AVO_Flow_plan_mechanism_in_place__c</fullName>
    <label>Is the Low Flow Plan mechanism in place</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>