force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Flow_Protection_Condition__c.field-meta.xml
<CustomField>
    <fullName>AVO_Flow_Protection_Condition__c</fullName>
    <label>Does the permit have Low Flow Protection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>