force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Flow_Straightener_Present__c.field-meta.xml
<CustomField>
    <fullName>AVO_Flow_Straightener_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flow Straightener Present</label>
    <type>Checkbox</type>
</CustomField>