force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Gauge_Reading__c.field-meta.xml
<CustomField>
    <fullName>AVO_Gauge_Reading__c</fullName>
    <label>Gauge Reading</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>