force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_GIS_Unique__c.field-meta.xml
<CustomField>
    <fullName>AVO_GIS_Unique__c</fullName>
    <label>GIS Unique</label>
    <length>255</length>
    <type>Text</type>
</CustomField>