force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_GIS_Verified_By__c.field-meta.xml
<CustomField>
    <fullName>AVO_GIS_Verified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GIS Verified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inspections5</relationshipName>
    <type>Lookup</type>
</CustomField>