force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_GPM__c.field-meta.xml
<CustomField>
    <fullName>AVO_GPM__c</fullName>
    <label>GPM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>