force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_GPS__c.field-meta.xml
<CustomField>
    <fullName>AVO_GPS__c</fullName>
    <label>GPS</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>