force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_GPS_Lat_Y__c.field-meta.xml
<CustomField>
    <fullName>AVO_GPS_Lat_Y__c</fullName>
    <label>GPS (Lat) Y</label>
    <length>11</length>
    <type>Text</type>
</CustomField>