force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_GPS_Long_X__c.field-meta.xml
<CustomField>
    <fullName>AVO_GPS_Long_X__c</fullName>
    <label>GPS (Long) X</label>
    <length>12</length>
    <type>Text</type>
</CustomField>