force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Has_the_well_been_plugged__c.field-meta.xml
<CustomField>
    <fullName>AVO_Has_the_well_been_plugged__c</fullName>
    <label>Has the well been plugged</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_YesNo</valueSetName>
    </valueSet>
</CustomField>