force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Height_of_casing_above_ground__c.field-meta.xml
<CustomField>
    <fullName>AVO_Height_of_casing_above_ground__c</fullName>
    <label>Height of casing above ground</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>