force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Inside_Diameter__c.field-meta.xml
<CustomField>
    <fullName>AVO_Inside_Diameter__c</fullName>
    <label>Inside Diameter of Metered Pie (Inches)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>