force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Inside_Diameter_Of_Casing_At_Surface__c.field-meta.xml
<CustomField>
    <fullName>AVO_Inside_Diameter_Of_Casing_At_Surface__c</fullName>
    <label>Inside diameter of casing at surface</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>