force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_Inspection_Date__c</fullName>
    <label>Inspection Date</label>
    <type>Date</type>
</CustomField>