force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Installed_Per_Specification__c.field-meta.xml
<CustomField>
    <fullName>AVO_Installed_Per_Specification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installed Per Specification</label>
    <type>Checkbox</type>
</CustomField>