force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Internal_diameters_if_caliper_used__c.field-meta.xml
<CustomField>
    <fullName>AVO_Internal_diameters_if_caliper_used__c</fullName>
    <label>Internal diameters (if caliper was used)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>