force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Irrigated_Acres__c.field-meta.xml
<CustomField>
    <fullName>AVO_Irrigated_Acres__c</fullName>
    <label>Irrigated Acres</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>