force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Irrigation_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Irrigation_Type__c</fullName>
    <label>Irrigation Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Center Pivot/Linear Move</fullName>
            </value>
            <value>
                <fullName>Drip</fullName>
            </value>
            <value>
                <fullName>Solid Set Sprinkler</fullName>
            </value>
            <value>
                <fullName>Traveler</fullName>
            </value>
            <value>
                <fullName>Non-Irr</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>