force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Irrigation_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>AVO_Irrigation_Type_Other__c</fullName>
    <label>Irrigation Type Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>