force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Is_meter_missing_at_site__c.field-meta.xml
<CustomField>
    <fullName>AVO_Is_meter_missing_at_site__c</fullName>
    <label>Is meter missing at site?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_YesNo</valueSetName>
    </valueSet>
</CustomField>