force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Is_the_irrigation_system_in_use__c.field-meta.xml
<CustomField>
    <fullName>AVO_Is_the_irrigation_system_in_use__c</fullName>
    <label>Is the irrigation system in use?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>