force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Is_well_plugged_with_material__c.field-meta.xml
<CustomField>
    <fullName>AVO_Is_well_plugged_with_material__c</fullName>
    <label>Is well plugged with material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_YesNo</valueSetName>
    </valueSet>
</CustomField>