force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Issue_Description__c.field-meta.xml
<CustomField>
    <fullName>AVO_Issue_Description__c</fullName>
    <label>Describe the issue you would like assist</label>
    <type>TextArea</type>
</CustomField>