force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Items_in_Non_Compliance__c.field-meta.xml
<CustomField>
    <fullName>AVO_Items_in_Non_Compliance__c</fullName>
    <label>Items in Non-Compliance</label>
    <type>TextArea</type>
</CustomField>