force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_Last_Modified_Date__c</fullName>
    <label>Last Modified Date</label>
    <type>DateTime</type>
</CustomField>