force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Latitude__c.field-meta.xml
<CustomField>
    <fullName>AVO_Latitude__c</fullName>
    <label>Latitude</label>
    <scale>9</scale>
    <type>Location</type>
</CustomField>