force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Leak_Repair_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>AVO_Leak_Repair_Maintenance__c</fullName>
    <label>Leak Repair &amp; Maintenance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>