force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_LegacyId__c.field-meta.xml
<CustomField>
    <fullName>AVO_LegacyId__c</fullName>
    <label>AVO_LegacyId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>