force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Licensed_Contractor_Onsite__c.field-meta.xml
<CustomField>
    <fullName>AVO_Licensed_Contractor_Onsite__c</fullName>
    <label>Licensed Contractor Onsite?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_YesNo</valueSetName>
    </valueSet>
</CustomField>