force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Lock_By__c.field-meta.xml
<CustomField>
    <fullName>AVO_Lock_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lock By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inspections4</relationshipName>
    <type>Lookup</type>
</CustomField>