force-app/main/default/objects/MUSW__Inspection__c/fields/AVO_Lontitude__c.field-meta.xml
<CustomField>
    <fullName>AVO_Lontitude__c</fullName>
    <label>Lontitude</label>
    <scale>9</scale>
    <type>Location</type>
</CustomField>